# ai-pipeline

./: .gitignore  README.md  pyproject.toml
src/ai_pipeline/: __init__.py  main.py
