[project]
name = "ai-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Diego Julca", email = "diegoj12jg@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ai-pipeline = "ai_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
